--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
     </style>
-    <title>React App</title>
+    <title>React weather</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
